[package]
name = "playlist_transit"
version = "0.1.0"
authors = ["Claire Moore <nrmoore@uci.edu>"]

[dependencies]
roxmltree = "0.4.0"
gtk = {version = "0.6.0", optional = true}
gio = {version = "", optional = true}

[profile.release]
panic = "abort"

[features]
default = ["gui"]
gui = ["gtk", "gio"]
